@@ -18,7 +18,7 @@
 
 NeroaacCodecWidget::NeroaacCodecWidget()
     : CodecWidget(),
-    currentFormat( "m4a" )
+    currentFormat( "m4a/aac" )
 {
     QGridLayout *grid = new QGridLayout( this );
     grid->setContentsMargins( 0, 0, 0, 0 );
